# containerbox

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/containerbox/: __init__.py  session.py
tests/: Dockerfile.node  testing.py
