[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "containerbox"
version = "0.1.0"
description = "Minimal Docker-only sandbox for executing code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
]
license = "MIT"
keywords = ["sandbox", "docker", "code-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/containerbox"]

[tool.hatch.build.targets.sdist]
include = [
    "src/containerbox",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
